@@ -1,3 +1,5 @@
+diff.cmo: diff.cmi 
+diff.cmx: diff.cmi 
 eprinter.cmo: eprinter.cmi extfun.cmi 
 eprinter.cmx: eprinter.cmi extfun.cmx 
 eprinter.cmi: extfun.cmi 
