@@ -1,8 +1,11 @@
 Camlp5 Version 5.01:
 ---------------------
 
-* [01 Oct 07] Added flag E in pr_r.cmo to ask to equilibrate match cases,
-  i.e if one case does not fit on the line, all cases must be cut.
+* [01 Oct 07] Added flag E in pr_r.cmo to ask to equilibrate cases in
+  'match' and in 'if' statements, i.e if one case does not fit on the line,
+  all cases must be cut.
+* [01 Oct 07] Added module "Diff" in the library (general comparison of
+  two arrays: useful, e.g. to compare two strings).
 * [01 Oct 07] Fixed bug in pa_o.cmo (normal syntax) introduced in version
   5.00. The example: "function Atom atext as cur :: tl' -> 0" did not
   parse, printing the error "incorrect alias pattern".
